# FullStackWebDevDjangoHTMX

./: createDjangoNotes.md  packages.txt
djangoproj/: Dockerfile  db.sqlite3  pyproject.toml
djangoproj/app/: admin.py  forms.py  models.py  urls.py  views.py
djangoproj/app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py
djangoproj/djangoproj/: settings.py  urls.py
djangoproj/templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
djangoproj/templates/registration/: login.html
notes/: createDjangoNotes.md
