[tool.poetry]
name = "djangoproj"
version = "0.1.0"
description = ""
authors = ["Davi Belo <davibelo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
